ex5/testdata/typechecker/error/ExtendsTest-err2.java
class ExtendsTest {
	public static void main(String[] a){
    }
}

class A extends B {} // TE
class B extends A {} // TE